src/snapshots/enderpy__lexer__tests__test-lexer-56.snap
---
source: src/lexer.rs
description: "=="
---
[
    Token {
        kind: Eq,
        value: None,
        start: 0,
        end: 2,
    },
]
