src/snapshots/enderpy__lexer__tests__test-lexer-57.snap
---
source: src/lexer.rs
description: "!="
---
[
    Token {
        kind: NotEq,
        value: None,
        start: 0,
        end: 2,
    },
]
