src/snapshots/enderpy__lexer__tests__test-lexer-6.snap
---
source: src/lexer.rs
description: ()
---
[
    Token {
        kind: LeftParen,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 1,
        end: 2,
    },
]
