src/snapshots/enderpy__lexer__tests__test-lexer-7.snap
---
source: src/lexer.rs
description: "[]"
---
[
    Token {
        kind: LeftBrace,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 1,
        end: 2,
    },
]
