src/snapshots/enderpy__lexer__tests__unicode-string-literals-1.snap
---
source: src/lexer.rs
description: "u\"world\""
---
[
    Token {
        kind: Unicode,
        value: Str(
            "u\"world\"",
        ),
        start: 0,
        end: 8,
    },
]
