src/snapshots/enderpy__lexer__tests__unicode-string-literals-2.snap
---
source: src/lexer.rs
description: "u\"\""
---
[
    Token {
        kind: Unicode,
        value: Str(
            "u\"\"",
        ),
        start: 0,
        end: 3,
    },
]
