src/snapshots/enderpy__lexer__tests__unicode-string-literals-3.snap
---
source: src/lexer.rs
description: "a = u\"hello\""
---
[
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
    Token {
        kind: Assign,
        value: None,
    },
    Token {
        kind: Unicode,
        value: String(
            "u\"hello\"",
        ),
    },
]
