src/snapshots/enderpy__lexer__tests__unicode-string-literals-4.snap
---
source: src/lexer.rs
description: "u'hello'"
---
[
    Token {
        kind: Unicode,
        value: String(
            "u'hello'",
        ),
    },
]
